Refactor the put route
